package com.tjudream.designpattern.factory.factorymethod.general;

/**
 * 描述:
 * <p>
 * Created by mengxiansen on 2018-11-27 13:05
 *
 * @author mengxs@lenovocloud.com
 */
public class ConcreteProduct1 extends Product {

    @Override
    public void method2() {

    }
}
