package com.tjudream.designpattern.factory.factorymethod.general;

/**
 * 描述:
 * <p>
 * Created by mengxiansen on 2018-11-27 13:05
 *
 * @author mengxs@lenovocloud.com
 */
public abstract class Product {
    public void method1() {

    }
    public abstract void method2();
}
